Fixes font readability

--- a/app/assets/stylesheets/custom2.css
+++ b/app/assets/stylesheets/custom2.css
@@ -2314,7 +2314,7 @@ table th[class*="span"],
     display: block;
     padding: 3px 20px;
     clear: both;
-    font-weight: normal;
+    font-weight: bold;
     line-height: 20px;
     color: #333333;
     white-space: nowrap; }
@@ -3793,7 +3793,8 @@ input[type="submit"].btn {
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
   color: #999999;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  font-weight: bold; }
   .navbar-inverse .brand:hover, .navbar-inverse .brand:focus,
   .navbar-inverse .nav > li > a:hover,
   .navbar-inverse .nav > li > a:focus {
